Complete automotive media app with proper service integration
- Add MainActivity with UI to show app is running
- Connect MainActivity to TAMediaLibraryService with foreground service
- Add FOREGROUND_SERVICE permission and notification setup
- Implement proper notification channel for media service
- Fix audio URLs to use working SoundHelix test files
- Add comprehensive logging for debugging media resolution
- Ensure MediaLibraryService is properly discoverable by automotive system

--- a/automotive/src/main/AndroidManifest.xml
+++ b/automotive/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <uses-feature
         android:name="android.hardware.type.automotive"
         android:required="true" />
@@ -12,6 +15,26 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TAAutomotive" />
+        android:theme="@style/Theme.TAAutomotive">
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name="com.example.taautomotive.shared.TAMediaLibraryService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="androidx.media3.session.MediaSessionService" />
+                <action android:name="androidx.media3.session.MediaLibraryService" />
+            </intent-filter>
+        </service>
+
+    </application>
 
 </manifest>
